# clawboss

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  dashboard.html  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  claude-pr-review.yml
agenthandler/: __init__.py  a2a.py  approval.py  auth.py  budget.py  builder.py  circuit_breaker.py  compression.py  connectors.py  context.py  edge_reduce.py  errors.py  mcp_server.py  model_router.py  observe.py  openclaw.py  pipeline.py  pipeline_poml.py  redact.py  reflection.py  sdk_adapters.py  server.py  session.py  skill.py  store.py  streams.py  supervisor.py  triggers.py
agenthandler/guardrails/: __init__.py  types.py
clawboss/: __init__.py  approval.py  audit.py  auth.py  budget.py  builder.py  circuit_breaker.py  connectors.py  context.py  errors.py  observe.py  openclaw.py  pipeline.py  pipeline_poml.py  policy.py  redact.py  reflection.py  replay.py  server.py  session.py  skill.py  store.py  streams.py  supervisor.py  triggers.py
clawboss/guardrails/: __init__.py  deterministic.py  llm_based.py
docs/: manifesto.md
examples/: a2a_agents.py  approval_flow.py  audit_logging.py  basic.py  circuit_breaker.py  context_compression.py  cost_attribution.py  data_flows.py  edge_reduce.py  from_config.py  guardrails.py  long_running_agent.py  mcp_server.py  openclaw_bridge.py  pii_redaction.py  pipeline.py  poml_pipeline.py  sdk_adapters.py  session_lifecycle.py  skill_builder.py  streaming.py  tool_scoping.py  triggers.py
npm/: README.md  package.json
openclaw-plugin/: openclaw.plugin.json  package.json
openclaw-plugin/src/: index.ts
tests/: test_a2a.py  test_approval.py  test_audit.py  test_budget.py  test_circuit_breaker.py  test_connectors.py  test_context.py  test_cost_attribution.py  test_errors.py  test_guardrails.py  test_llm_decisions.py  test_observe.py  test_openclaw.py  test_pipeline.py  test_pipeline_poml.py  test_policy.py  test_redact.py  test_replay_reflection.py  test_schema_discovery.py  test_scopes.py  test_sdk_adapters.py  test_server.py  test_session.py  test_skill.py  test_store.py  test_streams.py  test_supervisor.py  test_triggers.py
