[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clawboss"
version = "0.1.0"
description = "A way of controlling deployed agents to keep your (and their) sanity."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Arun Venkatadri" },
]
keywords = ["ai", "agents", "supervision", "circuit-breaker", "budget", "audit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.optional-dependencies]
server = ["fastapi>=0.100", "uvicorn[standard]>=0.20", "aiosqlite>=0.19"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "mypy>=1.0", "ruff>=0.4", "httpx>=0.25"]

[project.urls]
Homepage = "https://github.com/arunvenkatadri/Clawboss"
Repository = "https://github.com/arunvenkatadri/Clawboss"
Issues = "https://github.com/arunvenkatadri/Clawboss/issues"

[tool.hatch.build.targets.wheel]
packages = ["clawboss"]
artifacts = ["clawboss/py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_configs = true
