[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agenthandler"
version = "0.93.0"
description = "A way of controlling deployed agents to keep your (and their) sanity."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    { name = "Arun Venkatadri" },
]
keywords = ["ai", "agents", "supervision", "circuit-breaker", "budget", "audit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.optional-dependencies]
server = ["fastapi>=0.100", "uvicorn[standard]>=0.20", "aiosqlite>=0.19"]
kafka = ["aiokafka>=0.10"]
kinesis = ["aioboto3>=12.0"]
redis = ["redis>=5.0"]
streams = ["aiokafka>=0.10", "aioboto3>=12.0", "redis>=5.0"]
mcp = ["mcp>=1.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "mypy>=1.0", "ruff>=0.4", "httpx>=0.25"]

[project.urls]
Homepage = "https://github.com/arunvenkatadri/AgentHandler"
Repository = "https://github.com/arunvenkatadri/AgentHandler"
Issues = "https://github.com/arunvenkatadri/AgentHandler/issues"

[tool.hatch.build.targets.wheel]
packages = ["agenthandler"]
artifacts = ["agenthandler/py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["agenthandler.server", "agenthandler.auth", "agenthandler.mcp_server", "agenthandler.a2a", "agenthandler.sdk_adapters", "agenthandler.edge_reduce"]
warn_unused_ignores = false
disallow_untyped_decorators = false
disallow_subclassing_any = false

[[tool.mypy.overrides]]
module = [
    "fastapi.*",
    "pydantic.*",
    "httpx.*",
    "aiosqlite.*",
    "aiokafka.*",
    "aioboto3.*",
    "redis.*",
    "spacy.*",
    "psycopg2.*",
    "pymysql.*",
    "mcp.*",
    "pymongo.*",
    "opentelemetry.*",
    "localreduce.*",
    "openai_agents.*",
    "claude_agent_sdk.*",
    "yaml.*",
]
ignore_missing_imports = true
